fixed invisible header while loading

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2991,11 +2991,11 @@
 		}
 
 	body.is-loading #header .inner {
-		-moz-transform: scale(1.05);
-		-webkit-transform: scale(1.05);
-		-ms-transform: scale(1.05);
-		transform: scale(1.05);
-		opacity: 0;
+		-moz-transform: scale(1.2);
+		-webkit-transform: scale(1.2);
+		-ms-transform: scale(1.2);
+		transform: scale(1.2);
+		opacity: 1;
 	}
 
 		body.is-loading #header .inner .actions {
